update create data generation

--- a/create_data_generation.ipynb
+++ b/create_data_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:13.979179Z",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:38.715778Z",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:43.870177Z",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:43.878723Z",
@@ -92,7 +92,18 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['comment', 'father_name'], dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path = ''\n",
     "df = pd.read_csv(r'shopee_data/new_shopee_1.csv')\n",
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:44.478121Z",
@@ -112,7 +123,110 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2c639b825a8456397cceedd846a2a52",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/510M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>sentenceLength</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Balo &amp; Túi Ví Nam</td>\n",
+       "      <td>Hskbiwnsbjsbsnnx đj xbxjdnsnksksnsnjxjzbsjwmlanbnnnbbh j HD sjsnsndjsj</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Balo &amp; Túi Ví Nam</td>\n",
+       "      <td>Chất liệu:chắc  chắn   Vải\\nMàu sắc:đen\\nĐúng với mô tả:đúng\\n\\nMình thông cảm cho việc giao hàng lâu ví cầm tay OK đẹp lắm nhoa 🥹 đúng với hình ảnh của shop mong shop cố gắng chỗ đoạn khâu chỉ  ví mình bị bung một ít nhưng ko sao đẹp lắm nhoa khuyên nên mua nhoa giá tiền hợp lí =]]</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Balo &amp; Túi Ví Nam</td>\n",
+       "      <td>Tương tự như ad: Có\\nChất lượng: tốt\\nKích thước: tốt\\n\\nNhưng những gì tôi mong đợi là nơi để đặt tài liệu và nó không có!</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Balo &amp; Túi Ví Nam</td>\n",
+       "      <td>Đúng với mô tả:sản phẩm đúng như mô tả\\nMàu sắc:đúng màu đã đặt\\nChất liệu:ok</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Balo &amp; Túi Ví Nam</td>\n",
+       "      <td>giao hàng nhanh mình đặt 2 ngày là tới ùi\\nđóng gói kĩ càng, tặng sticker dễ thương\\nbalo chống nước, may đẹp k có chỉ thừa</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            category  \\\n",
+       "0  Balo & Túi Ví Nam   \n",
+       "1  Balo & Túi Ví Nam   \n",
+       "2  Balo & Túi Ví Nam   \n",
+       "3  Balo & Túi Ví Nam   \n",
+       "4  Balo & Túi Ví Nam   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                    reviewText  \\\n",
+       "0                                                                                                                                                                                                                       Hskbiwnsbjsbsnnx đj xbxjdnsnksksnsnjxjzbsjwmlanbnnnbbh j HD sjsnsndjsj   \n",
+       "1  Chất liệu:chắc  chắn   Vải\\nMàu sắc:đen\\nĐúng với mô tả:đúng\\n\\nMình thông cảm cho việc giao hàng lâu ví cầm tay OK đẹp lắm nhoa 🥹 đúng với hình ảnh của shop mong shop cố gắng chỗ đoạn khâu chỉ  ví mình bị bung một ít nhưng ko sao đẹp lắm nhoa khuyên nên mua nhoa giá tiền hợp lí =]]   \n",
+       "2                                                                                                                                                                  Tương tự như ad: Có\\nChất lượng: tốt\\nKích thước: tốt\\n\\nNhưng những gì tôi mong đợi là nơi để đặt tài liệu và nó không có!   \n",
+       "3                                                                                                                                                                                                                Đúng với mô tả:sản phẩm đúng như mô tả\\nMàu sắc:đúng màu đã đặt\\nChất liệu:ok   \n",
+       "4                                                                                                                                                                  giao hàng nhanh mình đặt 2 ngày là tới ùi\\nđóng gói kĩ càng, tặng sticker dễ thương\\nbalo chống nước, may đẹp k có chỉ thừa   \n",
+       "\n",
+       "   sentenceLength  \n",
+       "0              43  \n",
+       "1              79  \n",
+       "2              35  \n",
+       "3              24  \n",
+       "4              31  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_df = df.rename(columns={'father_name': 'category', 'comment': 'reviewText'})\n",
     "sample_df[\"sentenceLength\"] = sample_df[\"reviewText\"].apply(lambda text: len(tokenizer.encode(text)))\n",
@@ -122,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:56.018744Z",
@@ -133,14 +247,25 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gc.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:56.429079Z",
@@ -159,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:56.448317Z",
@@ -176,15 +301,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Generated examples of Toys_and_Games_5"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:47:56.466049Z",
@@ -195,9 +313,46 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPT2LMHeadModel(\n",
+       "  (transformer): GPT2Model(\n",
+       "    (wte): Embedding(50257, 768)\n",
+       "    (wpe): Embedding(1024, 768)\n",
+       "    (drop): Dropout(p=0.0, inplace=False)\n",
+       "    (h): ModuleList(\n",
+       "      (0-11): 12 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attn): GPT2Attention(\n",
+       "          (c_attn): Conv1D(nf=2304, nx=768)\n",
+       "          (c_proj): Conv1D(nf=768, nx=768)\n",
+       "          (attn_dropout): Dropout(p=0.0, inplace=False)\n",
+       "          (resid_dropout): Dropout(p=0.0, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (mlp): GPT2MLP(\n",
+       "          (c_fc): Conv1D(nf=3072, nx=768)\n",
+       "          (c_proj): Conv1D(nf=768, nx=3072)\n",
+       "          (act): NewGELUActivation()\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model_finetuned_path = r\"gpt2-finetuned-shopee\"\n",
+    "model_finetuned_path = r\"D:\\DAP\\code\\gpt2-finetuned-shopee\"\n",
     "\n",
     "learn.load(model_finetuned_path).cuda()\n",
     "learn.model.to(device)"
@@ -205,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-12T05:48:04.068919Z",
